--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </ol>
       </div>
       <p> please take a look on my page 
-      <a href="linkedin.com/in/mohamed-ahmed-a1a9321a7">contact me</a>
+      <a href="https://linkedin.com/in/mohamed-ahmed-a1a9321a7">contact me</a>
       </p>
       <hr>
       </section2>
@@ -55,7 +55,7 @@
       <section4>
       <p>This is my contact links, please let me know if you have any comments.</p>
       <ul>
-      <li> <a href="linkedin.com/in/mohamed-ahmed-a1a9321a7">linkedin</a>
+      <li> <a href="https://linkedin.com/in/mohamed-ahmed-a1a9321a7">linkedin</a>
       </li>
       <li><a href="https://github.com/mohamedahmed620">github</a></li>
       </ul>
